--- a/TwitterDemo/src/main/resources/application.properties
+++ b/TwitterDemo/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.jpa.show-sql = true
 spring.jpa.database=postgresql
 
 # Hibern    ate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
