--- a/TwitterDemo/src/main/resources/application.properties
+++ b/TwitterDemo/src/main/resources/application.properties
@@ -32,7 +32,7 @@ spring.jpa.show-sql = true
 spring.jpa.database=postgresql
 
 # Hibern    ate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
