--- a/TwitterDemo/pom.xml
+++ b/TwitterDemo/pom.xml
@@ -3,13 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.twitter</groupId>
-    <artifactId>demo</artifactId>
+    <groupId>com.olx</groupId>
+    <artifactId>A2I</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Twitter</name>
-    <description>twitter demo</description>
+    <name>Digital Journey</name>
+    <description>Digital Journey demo</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
