Application properties modified

--- a/TwitterDemo/src/main/resources/application.properties
+++ b/TwitterDemo/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.mvc.view.suffix=.jsp
 # connection. In this example we have "netgloo_blog" as database name and
 # "root" as username and password.
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/ApplicationDB    
+spring.datasource.url=jdbc:postgresql://localhost:5432/applicationdb
 spring.datasource.username=postgres
 spring.datasource.password=nitin1994
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -31,7 +31,7 @@ spring.jpa.show-sql = true
 
 spring.jpa.database=postgresql
 
-# Hibern    ate ddl auto (create, create-drop, update)
+# Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
