Email Service corrected

--- a/TwitterDemo/src/main/resources/application.properties
+++ b/TwitterDemo/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username =nitinkhulbe84@gmail.com
-spring.mail.password=Nitin1234!@#$
+spring.mail.password=Nitin123!@#
 
 #mail properties
 spring.mail.properties.mail.smtp.auth=true
