--- a/TwitterDemo/src/main/resources/application.properties
+++ b/TwitterDemo/src/main/resources/application.properties
@@ -42,3 +42,6 @@ spring.jpa.properties.hibernate.current_session_context_class=org.springframewor
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
