--- a/TwitterDemo/pom.xml
+++ b/TwitterDemo/pom.xml
@@ -266,10 +266,10 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
             <version>2.5.5</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 </project>
